--- a/viewer/index.html
+++ b/viewer/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
 
-    <title>Vite + React + TS</title>
+    <title>CareTwin Web Model Viewer</title>
   </head>
   <body>
     <div id="root"></div>
